# qwt5-qt5

./: .gitignore  CHANGES  CMakeLists.txt  INSTALL  README.md  qwt.prf  qwt.pro  qwt5-qt5.pc.in  qwt5-qt5.spec  qwtconfig.pri
designer/: CMakeLists.txt  designer.pro  qwt_designer_plugin.cpp  qwt_designer_plugin.h  qwtplugin.cpp
doc/: Doxyfile  qwt.dox
doc/html/: annotated.html  class_qwt_abstract_scale-members.html  class_qwt_abstract_scale.html  class_qwt_abstract_scale__inherit__graph.map  class_qwt_abstract_scale_draw-members.html  class_qwt_abstract_scale_draw.html  class_qwt_abstract_scale_draw__inherit__graph.map  class_qwt_abstract_slider-members.html  class_qwt_abstract_slider.html  class_qwt_abstract_slider__inherit__graph.map  class_qwt_alpha_color_map-members.html  class_qwt_alpha_color_map.html  class_qwt_alpha_color_map__inherit__graph.map  class_qwt_analog_clock-members.html  class_qwt_analog_clock.html  class_qwt_array_data-members.html  class_qwt_array_data.html  class_qwt_array_data__inherit__graph.map  class_qwt_array_data__inherit__graph.md5  class_qwt_arrow_button-members.html  class_qwt_arrow_button.html  class_qwt_c_pointer_data-members.html  class_qwt_c_pointer_data.html  class_qwt_c_pointer_data__inherit__graph.map  class_qwt_c_pointer_data__inherit__graph.md5  class_qwt_clipper-members.html  class_qwt_clipper.html  class_qwt_color_map-members.html  class_qwt_color_map.html  class_qwt_color_map__inherit__graph.map  class_qwt_compass-members.html  class_qwt_compass.html  class_qwt_compass__inherit__graph.map  class_qwt_compass_magnet_needle-members.html  class_qwt_compass_magnet_needle.html  class_qwt_compass_magnet_needle__inherit__graph.map  class_qwt_compass_rose-members.html  class_qwt_compass_rose.html  class_qwt_compass_rose__inherit__graph.map  class_qwt_compass_wind_arrow-members.html  (+396 more)
doc/man/man3/: QwtAbstractScale.3  QwtAbstractScaleDraw.3  QwtAbstractSlider.3  QwtAlphaColorMap.3  QwtAnalogClock.3  QwtArrayData.3  QwtArrowButton.3  QwtCPointerData.3  QwtClipper.3  QwtColorMap.3  QwtCompass.3  QwtCompassMagnetNeedle.3  QwtCompassRose.3  QwtCompassWindArrow.3  QwtCounter.3  QwtCurveFitter.3  QwtData.3  QwtDial.3  QwtDialNeedle.3  QwtDialScaleDraw.3  QwtDialSimpleNeedle.3  QwtDoubleInterval.3  QwtDoubleRange.3  QwtDynGridLayout.3  QwtEventPattern.3  QwtEventPattern_KeyPattern.3  QwtEventPattern_MousePattern.3  QwtIntervalData.3  QwtKnob.3  QwtLegend.3  QwtLegendItem.3  QwtLegendItemManager.3  QwtLinearColorMap.3  QwtLinearScaleEngine.3  QwtLog10ScaleEngine.3  QwtMagnifier.3  QwtMathMLTextEngine.3  QwtMetricsMap.3  QwtPainter.3  QwtPanner.3  (+58 more)
examples/: CMakeLists.txt  examples.pri
examples/bode/: CMakeLists.txt  bode.cpp  bode.h  bode_plot.cpp
examples/cpuplot/: CMakeLists.txt  cpuplot.cpp  cpustat.cpp
examples/curvdemo1/: CMakeLists.txt
examples/curvdemo2/: CMakeLists.txt
examples/data_plot/: CMakeLists.txt  data_plot.cpp
examples/dials/: CMakeLists.txt  cockpit_grid.cpp  compass_grid.cpp  speedo_meter.cpp
examples/event_filter/: CMakeLists.txt  canvaspicker.cpp  colorbar.cpp
examples/histogram/: CMakeLists.txt  histogram_item.cpp  histogram_item.h
examples/radio/: CMakeLists.txt
examples/realtime_plot/: CMakeLists.txt  incrementalplot.cpp  mainwindow.cpp
examples/simple_plot/: CMakeLists.txt
examples/sliders/: CMakeLists.txt  sliders.cpp
examples/spectrogram/: CMakeLists.txt  plot.cpp
examples/svgmap/: CMakeLists.txt
examples/sysinfo/: CMakeLists.txt
src/: CMakeLists.txt  qwt_abstract_scale_draw.cpp  qwt_abstract_slider.cpp  qwt_analog_clock.cpp  qwt_arrow_button.cpp  qwt_clipper.cpp  qwt_compass.cpp  qwt_counter.cpp  qwt_curve_fitter.cpp  qwt_dial.cpp  qwt_dial_needle.cpp  qwt_dyngrid_layout.cpp  qwt_event_pattern.cpp  qwt_global.h  qwt_knob.cpp  qwt_knob.h  qwt_layout_metrics.cpp  qwt_layout_metrics.h  qwt_magnifier.cpp  qwt_paint_buffer.cpp  qwt_painter.cpp  qwt_panner.cpp  qwt_picker.cpp  qwt_picker_machine.cpp  qwt_plot.cpp  qwt_plot_canvas.cpp  qwt_plot_curve.cpp  qwt_plot_item.cpp  qwt_plot_layout.cpp  qwt_plot_picker.cpp  qwt_plot_printfilter.cpp  qwt_plot_rasteritem.cpp  qwt_plot_rasteritem.h  qwt_plot_spectrogram.cpp  qwt_plot_spectrogram.h  qwt_plot_svgitem.h  qwt_plot_xml.cpp  qwt_raster_data.cpp  qwt_scale_draw.cpp  qwt_scale_draw.h  (+10 more)
